--- a/MicrosoftNoteExample/MicrosoftNoteExample.csproj
+++ b/MicrosoftNoteExample/MicrosoftNoteExample.csproj
@@ -47,6 +47,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
 
   <!--
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution
