--- a/MicrosoftNoteExample/MicrosoftNoteExample.csproj
+++ b/MicrosoftNoteExample/MicrosoftNoteExample.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="NotePage.xaml" />
+    <None Remove="Views\AllNotesPage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,12 +44,14 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
   </ItemGroup>
   <ItemGroup>
-    <Page Update="NotePage.xaml">
+    <Page Update="Views\AllNotesPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Views\" />
+    <Page Update="NotePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <!--
